--- a/.github/workflows/aznoninit-deploy.yaml
+++ b/.github/workflows/aznoninit-deploy.yaml
@@ -11,14 +11,17 @@ jobs:
     #runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
-      - uses: hashicorp/setup-terraform@v1
+      - name: Setup Python
+        uses: hashicorp/setup-terraform@v1
         with: 
           terraform_version: '1.3.3'
       - uses: actions/setup-python@v4
         with:
           python-version: '3.8'
-          cache: 'pip'
-      - run:  pip install -r requirements.txt
+      - name: Install Dependencies
+        run: |
+          python -m pip install --uupgrade pip
+          pip install -r requirements.txt
 
      #Log into Azure with azure_creds
       #- name: 'Az CLI login'
