--- a/.github/workflows/aznoninit-deploy.yaml
+++ b/.github/workflows/aznoninit-deploy.yaml
@@ -20,7 +20,7 @@ jobs:
           python-version: '3.8'
       - name: Install Dependencies
         run: |
-          python -m pip install --uupgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
      #Log into Azure with azure_creds
